<resources>
    <string name="app_name">ProjectApp</string>
    <string name="choose">Choose Lesson</string>
    <string name="type_day"> Input Day</string>
    <string name="type_time"> Input Time</string>
    <string name="type_week"> Input Week</string>
    <string name="add"> Add</string>
    <string name="back">Back</string>
    <string name="map">Map</string>
    <string name="widget"> Widget</string>
    <string name="find"> Find Me</string>


    <string-array name="spinner_items">
        <item> Math </item>
        <item> Chemistry</item>
        <item> Physics </item>
        <item> English</item>
        <item> Russian </item>
        <item> Biology</item>
        <item> Geography </item>
        <item> Literature </item>
    </string-array>

    <string-array name="day_items">
        <item> Monday </item>
        <item> Tuesday</item>
        <item> Wednesday </item>
        <item> Thursday</item>
        <item>Friday</item>
        <item>SaturnDay</item>
        <item>Sunday</item>
    </string-array>

    <string name="google" templateMergeStrategy="preserve" translatable="false">AIzaSyDwmOAM_W145JbEoCVeknb9zcTohuz051g</string>



</resources>