<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/choose"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spin"
        android:layout_width="387dp"
        android:layout_height="32dp"
        android:entries="@array/spinner_items"
        />

    <TextView
        android:id="@+id/tv_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/type_day"
        android:textColor="@color/black"
        />

    <Spinner
        android:id="@+id/spin_day"
        android:layout_width="387dp"
        android:layout_height="32dp"
        android:entries="@array/day_items"
        />

    <TextView
        android:id="@+id/tv_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_time"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/edit_time"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:inputType="time"
        />

    <TextView
        android:id="@+id/tv_fourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/type_week"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/edit_week"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="358dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/add"
        android:textColor="@color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>